Cambiado entorno a skr2

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = STM32H743Vx_btt
+default_envs = BIGTREE_SKR_2_F429_USB
 include_dir  = Marlin
 extra_configs =
     Marlin/config.ini
